<resources>
    <string name="app_name" translatable="false">AlertBLO</string>
    <string name="txt_appname" translatable="false">AlertBLO</string>
    <string name="txt_alerta" translatable="false">TextView</string>
    <string name="btt_crear" translatable="false">Crear</string>
    <string name="txt_text_fondo">Introduce la descripción de la alerta..</string>
    <string name="sw_critica">Crítica</string>
    <string name="txt_crear" translatable="false">Enviar</string>
    <string name="txt_enviarAlerta">Enviar</string>
    <string name="txt_verHistorial">Historial</string>
    <string-array name="idiomas">
        <item>Castellano</item>
        <item>Valenciano</item>
    </string-array>
    <string name="txt_salir">Salir</string>
    <string name="txt_confirmar_salir">Confirmar salir</string>
    <string name="txt_si">Si</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="tit_menu_idioma">Cambiar idioma</string>
    <string name="txt_historial_alertas">Historial</string>
    <string name="txt_todas">Todas</string>
    <string name="txt_critica">Criticas</string>
    <string name="txt_aviso">Avisos</string>
    <string name="txt_titulo"></string>
    <string name="txt_descripcion"></string>
    <string name="txt_fechahora"></string>
    <string name="tit_inicio">Inicio</string>
    <string name="tit_historial">Historial</string>
    <string name="tit_ajustes">Idioma</string>
    <string name="txt_aceptar">Aceptar</string>
</resources>