<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="14dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp" >

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/btn_salir"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/txt_appname"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="?attr/colorOnSurface" />

        <ImageButton
            android:id="@+id/btn_salir"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/txt_salir"
            android:src="@drawable/ic_salir"
            app:tint="?attr/colorOnSurface" />

    </RelativeLayout>

    <EditText
        android:id="@+id/alerta"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:textSize="20sp"
        android:hint="@string/txt_text_fondo"
        android:inputType="textMultiLine"
        android:autofillHints="no"
        android:visibility="visible" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_critica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:paddingHorizontal="20dp"
        android:textSize="20sp"
        android:text="@string/sw_critica" />

    <Button
        android:id="@+id/btt_crear"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_crear"
        android:textStyle="bold"
        android:textSize="18sp"
        android:backgroundTint="#673AB7"/>

</LinearLayout>


